Updating the HTML API pages.

--- a/Locations.html
+++ b/Locations.html
@@ -20,7 +20,7 @@
                 <h2>
                     <span><img alt="WattDepot logo"
                         src="wattdepot-logo.png"> WattDepot3 HTML
-                        API: Locations</span>
+                        API: Sensor Locations</span>
                 </h2>
             </header>
         </div>
@@ -31,12 +31,16 @@
                     <ul class="nav nav-pills nav-stacked">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="HtmlApi.html">Overview</a></li>
-                        <li class="active"><a href="Locations.html">Locations</a>
-                        <li><a href="Sensors.html">Sensors</a>
-                        <li><a href="SensorGroups.html">Sensor
-                                Groups</a>
-                        <li><a href="SensorModels.html">Sensor
-                                Models</a>
+                        <li class="active"><a href="Sensors.html">Sensors</a>
+                            <ul>
+                                <li class="active"><a
+                                    href="Locations.html">Sensor
+                                        Locations</a></li>
+                                <li><a href="SensorGroups.html">Sensor
+                                        Groups</a></li>
+                                <li><a href="SensorModels.html">Sensor
+                                        Models</a></li>
+                            </ul></li>
                         <li><a href="SensorProcesses.html">Sensor
                                 Processes</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
@@ -50,11 +54,11 @@
                         <header>
                             <h2>
                                 <span class="big-type">GET</span>
-                                /wattdepot/locations/
+                                /wattdepot/{group_id}/locations/
                             </h2>
                         </header>
                         <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/locations/
+                            http://server.wattdepot.org/wattdepot/{group_id}/locations/
                             <a class="btn right"
                                 onclick="$('#get_locations_response').slideToggle()"><b>Response</b></a>
                         </div>
@@ -82,7 +86,8 @@
 		    </pre>
                         </div>
                         <div class="card-description">
-                            <p>Get a full list of defined Locations.</p>
+                            <p>Get a full list of defined Locations
+                                for the given user group.</p>
                         </div>
                     </section>
                 </div>
@@ -91,11 +96,11 @@
                         <header>
                             <h2>
                                 <span class="big-type">GET</span>
-                                /wattdepot/location/<span>{location_id}</span>
+                                /wattdepot/{group_id}/location/<span>{location_id}</span>
                             </h2>
                         </header>
                         <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/location/ilima-6th
+                            http://server.wattdepot.org/wattdepot/{group_id}/location/ilima-6th
                             <a class="btn right"
                                 onclick="$('#get_location_response').slideToggle()"><b>Response</b></a>
                         </div>
@@ -115,7 +120,7 @@
                         </div>
                         <div class="card-description">
                             <p>Get the Location with the given
-                                location_id.</p>
+                                location_id for the given user group.</p>
                         </div>
                     </section>
                 </div>
@@ -124,7 +129,7 @@
                         <header>
                             <h2>
                                 <span class="big-type">PUT</span>
-                                /wattdepot/location/
+                                /wattdepot/{group_id}/location/
                             </h2>
                         </header>
                         <div class="card-info">
@@ -132,25 +137,20 @@
                             application/json" -d '{"description":"Hale
                             Aloha Ilima residence hall 6th
                             floor","altitude":30,"longitude":-157.812727,"latitude":21.294642,"id":"ilima-6th"}'
-                            http://server.wattdepot.org/wattdepot/location/
-                            <a class="btn right"
-                                onclick="$('#put_location_response').slideToggle()"><b>Response</b></a>
+                            http://server.wattdepot.org/wattdepot/{group_id}/location/
+                            
                         </div>
                         <div class="card-info-more"
                             id="put_location_response" display="none">
                             <pre>
               <code>
-<span>{</span>
-   <span>&quot;status&quot;</span><span>:</span> <span>200,</span>
-   <span>&quot;message&quot;</span><span>:</span> <span>&quot;OK&quot;</span>
-<span class="p">}</span>
               </code>
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Add the Location. Will return the
-                                status. Error status if duplicate unique
-                                id.</p>
+                            <p>Add the Location for the given user
+                                group. Will return the HTTP status. Error
+                                status if duplicate unique id.</p>
                         </div>
                     </section>
                 </div>
@@ -159,31 +159,25 @@
                         <header>
                             <h2>
                                 <span class="big-type">DEL</span>
-                                /wattdepot/location/<span>{location_id}</span>
+                                /wattdepot/{group_id}/location/<span>{location_id}</span>
                             </h2>
                         </header>
                         <div class="card-info">
                             curl -X DELETE
-                            http://server.wattdepot.org/wattdepot/location/ilima-6th
-                            <a class="btn right"
-                                onclick="$('#del_location_response').slideToggle()"><b>Response</b></a>
+                            http://server.wattdepot.org/wattdepot/{group_id}/location/ilima-6th
                         </div>
                         <div class="card-info-more"
                             id="del_location_response" display="none">
                             <pre>
               <code>
-<span>{</span>
-   <span>&quot;status&quot;</span><span>:</span> <span>200,</span>
-   <span>&quot;message&quot;</span><span>:</span> <span>&quot;OK&quot;</span>
-<span class="p">}</span>
               </code>
             </pre>
                         </div>
                         <div class="card-description">
                             <p>Deletes the Location with the given
-                                location_id. Will return the status.
-                                Error status if the location_id is not
-                                defined.</p>
+                                location_id for the given user group.
+                                Will return the HTTP status. Error status if
+                                the location_id is not defined.</p>
                         </div>
                     </section>
                 </div>
